--- a/lenet5/LeNet5.ipynb
+++ b/lenet5/LeNet5.ipynb
@@ -9,6 +9,13 @@
    "source": [
     "# LeNet5\n",
     "\n",
+    "This notebook makes use of numpy, matplotlib.pyplot and tensorflow (v 2.0).\n",
+    "In order to run it, I recomment to create a virtual environment and install those packages (or instead, use a cloud environment like Google Colab). It's important to install Tensorflow 2.0 (it won't work on lower versions).\n",
+    "\n",
+    "Feel free to download the original notebook this page to play with it!\n",
+    "You will find it together with the necessary resources to run it under:\n",
+    "https://github.com/Martiiiin/sample-ml-projects/tree/master/lenet5\n",
+    "\n",
     "## INSTRUCTIONS\n",
     "\n",
     "1. Upload to local directory the files __utils.py__ (custom utility functions), and __digits.idx3-ubyte__ (the weights for the ouput layer of the model, implemented as a gaussian connections layer).\n",
